# QuadTree

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: error.rs  main.rs
config/: Cargo.toml
config/mocks/: full_config.ini  partial_config.ini
config/src/: config.rs  lib.rs
proto/: Cargo.toml  build.rs
proto/proto/: quad.proto
proto/src/: lib.rs
server/: Cargo.toml
server/proto/: quad.proto
server/src/: main.rs  server.rs
storage/: Cargo.toml
storage/src/: circle.rs  lib.rs  point.rs  quad.rs  rectangle.rs
