[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }
tonic = "0.9.2"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.4.2", features = ["derive"] }
anyhow = "1.0"
